Version 1.1.0-CVS (?? ??? 2006)
 - Fixed bug 1502420: daily repeat doesn't skip weekend
 - Fixed bug 1414471: missing 'back to my calendar' in the trailer for 'non_user'
 - Fixed bug 1366151: NUC's cannot be handled by their admins
 - Fixed bug 1499150: Events Not Wordwrapping Correctly
 - Implemented new method of restricting direct file access
 - Implemented PATCH 1498087: Add simple navigation to help
 - Implemented PATCH 1498201: Don't print ThemeMenubar
 - Fixed bug 1497840: Entries not shown in Day view for current day +GMT TZ only
 - Fixed bug 1472286: Event Creation Aborted Upon Error
 - Fixed bug 1476212: Conflict check with repeating events and DST
 - Fixed bug 1428140: 'top-menue' - truncated using IE6
 - Fixed bug 1496308: error message regarding 'cachedir'
 - Implemented RFE 1496319: Left align "Users" column in "Week (Users vertical)" view
 - Implemented RFE 1176218: can not select category in year-view
 - Implemented RFE 1075840: "Manage calendar of" during management
 - Fixed bug 1490641: 'Reports' out by 2 weeks
 - Implemented PATCH 1470681: New preference: DISPLAY_TASKS_YEAR
 - Implemented PATCH 1459888: New preference: DISPLAY_MINUTES
 - Fixed bug 1493472: entered 'task' will not be displayed on day.php
 - Fixed bug 1495426: grid incomplete at preview of colors
 = Fixed bug 1457983: Assistants don't delete events for everyone
 - Fixed bug 1487016: Events not listing in time order
 - Changed functions to return strings vs echoing data...precursor to templating
 - Fixed bug 1492216: Firefox 'Live Bookmark' shows '(Empty)'
 - Fixed bug 1492208: Entries not displayed on last day of week in 'Week' view
 - Fixed bug 1493481: 'small task list' is on the bottom of the month.php
 - Fixed bug 1491490: cal_url is too short
 - Fixed bug 1492792: Month-, Week- and Year-selection at trailer are missing
 - Fixed bug 1493405: [_public_] won't be displayed in the proper language
 - Fixed bug 1493446: 'Edit' - button not displayed in the proper language